# Rico_2Cam_App

./: README.md  app_data.db  auth.py  build_exe.bat  convert_logo.py  debug.py  main.py  main.spec  pyproject.toml
