[project]
name = "qr-cam-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyinstaller>=6.19.0",
    "pyqt6>=6.11.0",
    "pyzbar>=0.1.9",
]
